# papersome

./: .gitignore  README.md  environment-mac.yml  main.py  pyproject.toml  requirements.txt  summarize_arxiv.py
papersome/: arxiv.py
src/papersome/: pdf.py
